# MoneyTracker

./: +  .gitignore  README.md  app.py  backend_documentation.md  build.sh  database.db  moneytracker.spec  pyproject.toml
.benchmarks/Linux-CPython-3.12-64bit/: 0186_unversioned_20250812_171435.json  0187_unversioned_20250812_171724.json  0188_unversioned_20250813_142228.json
docs/: API_Documentation.md  Domain.md  Services.md  app_guide.md  backend_documentation.md  openapi.json
src/: default_settings.py
src/api/: dependencies.py  main.py  security.py
src/api/endpoints/: categories.py  settings.py  transactions.py  users.py
src/core/: exceptions.py
src/core/domain/: category.py  setting.py  transaction.py  user.py
src/core/repositories/: abstract_app_config_repository.py  abstract_category_repository.py  abstract_exchange_rate_repository.py  abstract_transaction_repository.py  abstract_unit_of_work.py  abstract_user_repository.py  abstract_user_setting_repository.py
src/core/services/: category_service.py  exc_rate_service.py  shutdown_service.py  startup.py  (+4 more)
src/infrastructure/: connection_pool.py  dependencies.py  job_manager.py  task_queue.py  worker.py
src/moneytracker/: app.py  utils.py
src/tui/: main.py  utils.py
test/: test_connection_pool.py  test_exchange_rate_provider.py  test_job_manager.py  test_worker.py  util_test.py
test/test_repository/: test_app_config_repository.py  test_app_setting_repository.py  test_category_repository.py  test_exchange_rate_repository.py  test_setting_repostitory.py  test_transaction_repository.py  test_user_repository.py  test_user_setting_repostitory.py
test/test_services/: test_categories_service.py  test_exc_rate_service.py  test_startup_service.py  test_transaction_service.py  test_user_service.py
test/timing/: benchmark_transaction.py  fill_benchmark_db.py
(+80 files in other folders)
