[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_package"
version = "0.1.0"
description = "A short description of my project"
authors = [
  { name="Michele Bianchi"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12.3"
dependencies = [
"pydantic==2.11.7",
"pytest==8.3.5",
"Requests==2.32.4]"
]

[tool.pytest.ini_options]
testpaths = ["."]
pythonpath = ["."]


[tool.ruff]
line-length = 100

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]
