[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MoneyTracker"
version = "0.1.0"
description = "A short description of my project"
authors = [
  { name="Michele Bianchi"}
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E.*"]
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
"pydantic==2.11.7",
"pytest==8.3.5",
"Requests==2.32.4"
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]


[tool.ruff]
line-length = 100

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]
